Fix content width on small screens

--- a/assets/scss/default/style.scss
+++ b/assets/scss/default/style.scss
@@ -22,6 +22,7 @@ body {
 
     > * {
         max-width: 700px;
+        min-width: 0;
 
         font-family: 'Source Sans Pro', sans-serif;
         font-size: 1.1rem;
@@ -91,11 +92,10 @@ body {
         background-color: #272822;
     }
 
-    nav {
+    header > nav {
         margin: 0.5em 0;
         padding-bottom: 0.5em;
         border-bottom: 2px solid $darkgray;
-        flex: 1;
 
         ul {
             display: flex;
@@ -123,7 +123,6 @@ body {
         flex: 1;
 
         img {
-            display: block;
             margin: 0 auto;
         }
     }
@@ -131,8 +130,10 @@ body {
     .article-navigation {
         border-top: 1px solid $darkgray;
 
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        > nav {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
 
         a {
             margin: 0.2em 0;
